# MathModel

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  FILE_RELATIONSHIP_MAP.md  LICENSE  README.md  mathmodelagent.skills.sh.json  pytest.ini
.obsidian/: graph.json
app/: .gitignore  CHANGELOG.md  README.md  start.bat
app/backend/: README.md  pyproject.toml  requirements-langgraph.txt  requirements.txt
app/backend/app/: __init__.py  config.py  harness.py  json_preprocessor.py  langgraph_runner.py  langgraph_state.py  main.py  model_adapters.py  models.py  phase_plan.py  prompts.py  runner.py  studio_api.py  workspace.py
app/backend/tests/: test_api.py
docs/: LANGGRAPH_BENCHMARK_REPORT.json  LANGGRAPH_BENCHMARK_REPORT.md  MULTI_MODEL_BENCHMARK.json  MULTI_MODEL_BENCHMARK.md  RELEASE_v2.5.0-alpha.md  RELEASE_v2.7-alpha.md  control-center-beginner-guide.md  control-center-ui-spec.md  control-center-v3.md  frontend-api-contract.md  frontend-beginner-guide.md  frontend-control-center-v2.md  getting-started.md  langgraph-runner.md  local-deployment-guide.md  studio-v3-claude-handoff.md  studio-v3-implementation.md
knowledge/: README.md  libraries.json
memory/: failed_approaches.md  model_lessons.md  reviewer_lessons.md  summary.md
scripts/: audit_benchmark.py  doctor_control_center.py  import_zhanwen_mathmodel.py  langgraph_benchmark.py  memory_brief.py  memory_distill.py  memory_log.py  multi_model_benchmark.py  new_v2_workspace.py  rag_ingest.py  rag_query.py  real_provider_benchmark.py  real_provider_compare.py  setup_control_center.ps1  (+3 more)
(+502 files in other folders)
